# login-registration-dashboard

./: README.md  pnpm-lock.yaml
apps/api/: README.md  auth.py  config.py  database.py  main.py  mmm_analysis.py  models.py  pyproject.toml  requirements.txt  schemas.py
apps/web/: tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/web/components/auth/: login-form.tsx  register-form.tsx
apps/web/lib/: auth-context.tsx
