[project]
name = "app"
version = "0.1.0"
description = "Authentication API with FastAPI"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.23",
    "psycopg[binary]>=3.1.0",
    "pydantic[email]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.6",
    "pyjwt>=2.8.0",
    "uvicorn[standard]>=0.24.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "google-meridian>=0.0.1",
    "tensorflow==2.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]